Solved horizontal scroll on mobile devices,problem was section 3, Text-content div > a  img

--- a/Stiles/index.css
+++ b/Stiles/index.css
@@ -314,6 +314,7 @@ h3{
     }
     .section-3{
         display: flex;
+        width: 100%;
         flex-direction: column;
         margin-top: 15%;
         margin-bottom: 15%;
@@ -333,6 +334,10 @@ h3{
     }
     .section-3 .Text-content{
         order: 1;
+        width: 100%;
+    }
+    .section-3 .Text-content a,#Arrow{
+        max-width: 80%;
     }
     /*section 4 img sizes and basic*/
     .section-4 img{
